@@ -5897,13 +5897,6 @@ bigmul0(VALUE x, VALUE y)
     return z;
 }
 
-/*
- *  call-seq:
- *     big * other  -> Numeric
- *
- *  Multiplies big and other, returning the result.
- */
-
 VALUE
 rb_big_mul(VALUE x, VALUE y)
 {
@@ -6844,7 +6837,6 @@ Init_Bignum(void)
     rb_define_method(rb_cBignum, "coerce", rb_big_coerce, 1);
     rb_define_method(rb_cBignum, "+", rb_big_plus, 1);
     rb_define_method(rb_cBignum, "-", rb_big_minus, 1);
-    rb_define_method(rb_cBignum, "*", rb_big_mul, 1);
     rb_define_method(rb_cBignum, "/", rb_big_div, 1);
 
     rb_define_method(rb_cBignum, "===", rb_big_eq, 1);
